--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         id="sem3_sgpa"
       />
       <input type="text" class="border border-black" name="sem4_sgpa" id="sem4_sgpa" />
-      <button id="Calculate">Calculate</button>
+      <button class="p-20" id="Calculate">Calculate</button>
       <span id="result"></span>
     </main>
   </body>
