handled default values and added reset

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       />
       <input type="text" class="border border-black" name="sem4_sgpa" id="sem4_sgpa" />
       <button class="p-20" id="Calculate">Calculate</button>
+      <button class="p-20" id="Reset">Reset</button>
+
+      <!-- <input type = "button" value = "Reset data" onClick = "fun()"/>   -->
       <span id="result"></span>
     </main>
   </body>
