--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="bg-cyan-500 text-white top-0 z-10">
       <section class="py-4 flex justify-between items-center m-auto w-4/5">
         <h1 class="text-4xl pr-4 font-light">
-          <a href="#car" id="main-header-text"
+          <a href="" id="main-header-text"
             >Danish Institute of Andshand Technology CGPA Calculator</a
           >
         </h1>
